force-app/main/default/objects/ESC_NBC_Prospect__c/ESC_NBC_Prospect__c.object-meta.xml
<CustomObject>
    <label>Prospect</label>
    <nameField>
        <label>Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>