force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Data_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Data_Cleaned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Cleaned</label>
    <type>Checkbox</type>
</CustomField>