force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_About__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_About__c</fullName>
    <label>About</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>