force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Address__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>