force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>