force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Application_Id__c</fullName>
    <externalId>true</externalId>
    <label>Application Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>