force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Current_Employer__c</fullName>
    <label>Current Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>