force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Description__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>