force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>