force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Email__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>