force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>