force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Experience__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Experience__c</fullName>
    <label>Experience</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>