force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Fax__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Fax__c</fullName>
    <label>Fax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>