force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>