force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Gender_Identity__c</fullName>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Nonbinary</fullName>
            </value>
            <value>
                <fullName>Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>