force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Individual__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>