force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Is_Current_User_the_Owner__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Is_Current_User_the_Owner__c</fullName>
    <formula>OwnerId  =  $User.Id</formula>
    <label>Is Current User the Owner?</label>
    <type>Checkbox</type>
</CustomField>