force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABA</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>BCBA</fullName>
            </value>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>COTA</fullName>
            </value>
            <value>
                <fullName>Counselor</fullName>
            </value>
            <value>
                <fullName>Diagnostician</fullName>
            </value>
            <value>
                <fullName>Environmental Scientist</fullName>
            </value>
            <value>
                <fullName>ERMHS Therapist</fullName>
            </value>
            <value>
                <fullName>GN-EDU</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Interpreter</fullName>
            </value>
            <value>
                <fullName>Librarian</fullName>
            </value>
            <value>
                <fullName>LMFT</fullName>
            </value>
            <value>
                <fullName>LMSW</fullName>
            </value>
            <value>
                <fullName>LPC</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>LSW</fullName>
            </value>
            <value>
                <fullName>LVN</fullName>
            </value>
            <value>
                <fullName>MFT</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>OT-A</fullName>
            </value>
            <value>
                <fullName>Para</fullName>
            </value>
            <value>
                <fullName>PSY</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>PT-A</fullName>
            </value>
            <value>
                <fullName>RBT</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>