force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Language__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>