force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Last_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Last_Transfer_Date__c</fullName>
    <label>Last Transfer Date</label>
    <type>Date</type>
</CustomField>