force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Linkedin_URL__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Linkedin_URL__c</fullName>
    <label>Linkedin URL</label>
    <type>Url</type>
</CustomField>