force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>