force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_No_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_No_Of_Employees__c</fullName>
    <label>No. Of Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>