force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Phone__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>