force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Position_Old__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Position_Old__c</fullName>
    <label>Position Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>