force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Prev_15_Day_Date__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Prev_15_Day_Date__c</fullName>
    <formula>TODAY()-15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prev_15_Day_Date</label>
    <type>Date</type>
</CustomField>