force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Prospect_Source__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Prospect_Source__c</fullName>
    <label>Prospect Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>SLP.com</fullName>
            </value>
            <value>
                <fullName>Scraped</fullName>
            </value>
            <value>
                <fullName>SchoolSpring</fullName>
            </value>
            <value>
                <fullName>Edjoin</fullName>
            </value>
            <value>
                <fullName>CareerJet</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Internal Data</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>ZipRecruiter</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>Career Portal</fullName>
            </value>
            <value>
                <fullName>Neuvoo</fullName>
            </value>
            <value>
                <fullName>Resume Inbox</fullName>
            </value>
            <value>
                <fullName>User Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>