force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Prospect_Status__c</fullName>
    <label>Prospect Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>In Touch</fullName>
            </value>
            <value>
                <fullName>Active_Prospect</fullName>
                <label>Active Prospect</label>
            </value>
            <value>
                <fullName>Submission</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>