force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Rating__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>