force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_RecordType_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>