force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>