force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Speciality__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Speciality__c</fullName>
    <label>Speciality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audiologist</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>DHH</fullName>
            </value>
            <value>
                <fullName>Eng</fullName>
            </value>
            <value>
                <fullName>Intervention Specialist</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RSP</fullName>
            </value>
            <value>
                <fullName>Sci</fullName>
            </value>
            <value>
                <fullName>SST</fullName>
            </value>
            <value>
                <fullName>Theatre Education</fullName>
            </value>
            <value>
                <fullName>Transition Specialist</fullName>
            </value>
            <value>
                <fullName>TVI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>