force-app/main/default/objects/ESC_NBC_Prospect__c/fields/ESC_NBC_Website__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>