force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Expected_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Expected_Job_Type__c</fullName>
    <label>Expected Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part time</fullName>
            </value>
            <value>
                <fullName>Full time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>