force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expected Salary</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>