force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Expected_Salary_Type__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary_Type__c</fullName>
    <label>Expected Salary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>