force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Geocode_Accuracy_Score__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Accuracy_Score__c</fullName>
    <label>Geocode Accuracy Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>