force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Geocode_Accuracy_Type__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Accuracy_Type__c</fullName>
    <label>Geocode Accuracy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>