force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Hide_Fields__c.field-meta.xml
<CustomField>
    <fullName>Hide_Fields__c</fullName>
    <formula>IF($UserRole.Name =  &apos;Recruiter&apos;&amp;&amp; $User.Id !=  OwnerId &amp;&amp;  RecordType.Name = &apos;Active Prospect&apos; , True, False)
||
IF(($UserRole.Name =  &apos;Recruiter&apos;|| $UserRole.Name =  &apos;Sales Rep&apos;) &amp;&amp;  DND__c , True, False)</formula>
    <label>Hide Fields</label>
    <type>Checkbox</type>
</CustomField>