force-app/main/default/objects/ESC_NBC_Prospect__c/fields/length_of_zip_code__c.field-meta.xml
<CustomField>
    <fullName>length_of_zip_code__c</fullName>
    <formula>len( ESC_NBC_Address__PostalCode__s )</formula>
    <label>length of zip code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>