force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Relocation__c.field-meta.xml
<CustomField>
    <fullName>Relocation__c</fullName>
    <label>Relocation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>