force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Temp_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Lead_Id__c</fullName>
    <label>Temp Lead Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>