force-app/main/default/objects/ESC_NBC_Prospect__c/fields/Traveling_Preference__c.field-meta.xml
<CustomField>
    <fullName>Traveling_Preference__c</fullName>
    <label>Traveling Distance/Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>