force-app/main/default/objects/ESC_NBC_Prospect__c/recordTypes/Active_Lead.recordType-meta.xml
<RecordType>
    <fullName>Active_Lead</fullName>
    <active>true</active>
    <description>A recruiter has contacted this person and is in process of placing him. Remove visibility from other Recuiters</description>
    <label>Active Prospect</label>
</RecordType>