force-app/main/default/objects/ESC_NBC_Prospect__c/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <description>We will work on this in phase 2. This is converted lead. Lead gets converted to a contact and other workflows start</description>
    <label>Employee</label>
</RecordType>