force-app/main/default/objects/ESC_NBC_Prospect__c/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <description>Leads that are in the database. They are missing phone and email.</description>
    <label>Incomplete Lead</label>
</RecordType>