force-app/main/default/objects/ESC_NBC_Prospect__c/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <description>These are Prospect records in the data pool that everybody can see and approach</description>
    <label>Prospect (Lead database)</label>
</RecordType>