force-app/main/default/objects/ESC_NBC_Prospect__c/listViews/Active_Prospects.listView-meta.xml
<ListView>
    <fullName>Active_Prospects</fullName>
    <columns>NAME</columns>
    <columns>ESC_NBC_Job_Title__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ESC_NBC_Address__City__s</columns>
    <columns>ESC_NBC_Address__StateCode__s</columns>
    <columns>ESC_NBC_Address__PostalCode__s</columns>
    <columns>ESC_NBC_Headline__c</columns>
    <columns>Activation_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Prospects</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Recruiting_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>