force-app/main/default/objects/ESC_NBC_Prospect__c/listViews/Incomplete_Leads.listView-meta.xml
<ListView>
    <fullName>Incomplete_Leads</fullName>
    <columns>NAME</columns>
    <columns>ESC_NBC_Job_Title__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ESC_NBC_Address__City__s</columns>
    <columns>ESC_NBC_Address__StateCode__s</columns>
    <columns>ESC_NBC_Address__PostalCode__s</columns>
    <columns>ESC_NBC_Headline__c</columns>
    <columns>ESC_NBC_Linkedin_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ESC_NBC_Prospect__c.Lead</value>
    </filters>
    <label>Incomplete Leads (Data Team)</label>
    <sharedTo>
        <group>Data_Group</group>
        <roleAndSubordinatesInternal>Recruiting_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>