force-app/main/default/objects/ESC_NBC_Prospect__c/listViews/Recently_Modified_Active_Prospects.listView-meta.xml
<ListView>
    <fullName>Recently_Modified_Active_Prospects</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4 AND 5 AND 6</booleanFilter>
    <columns>NAME</columns>
    <columns>ESC_NBC_Job_Title__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>ESC_NBC_Headline__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ESC_NBC_Prospect__c.Active_Lead</value>
    </filters>
    <filters>
        <field>LAST_ACTIVITY</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Aqib Umar</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Aman Sulaiman</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Every Special Child</value>
    </filters>
    <label>Recently Modified Active Prospects</label>
    <sharedTo>
        <role>Data_Team</role>
    </sharedTo>
</ListView>